--- a/index.html
+++ b/index.html
@@ -5,24 +5,16 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <!--Top navigation bar-->
-    <div class="top-nav">
+    <!--Top navigation bar/searchbar-->
         <ul>
-            <li class="t-left">About</li>
-            <li class="t-left">Store</li>
-            <li class="t-right">Gmail</li>
-            <li class="t-right">Images</li>
+            <li class="t-left"> <img id="logo" src=https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png alt="Google logo">
+            </li>
+            <li><form class="searchbar">
+                <input type="text">
+              </form></li>
         </ul>
-    </div>
 <!--Middle of page/content-->
  <div class="center">
-     <img id="logo" src=https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png alt="Google logo">
-
-    <!--Search bar-->
-    <div>
-     <form class="searchbar">
-        <input type="text">
-     </form>
     </div>
     <div class="icons">
         <img src="https://upload.wikimedia.org/wikipedia/commons/2/22/Google_Magnifying_Glass.svg" id="icon-l" style="background-colorquamarine;"> <img src="assets/mic.png" id="icon-r">
