almost completed top nav - need to figure out how to position searchbar next to logo without using positioning

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <ul>
             <li class="t-left"> <img id="logo" src=https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png alt="Google logo">
             </li>
-            <li><form class="searchbar">
-                <input type="text">
-              </form></li>
+            <li> <form class="searchbar"> <input type="text"> </form></li>
+            <li class="t-right"> <form> <input class="sign-in" type="submit" value="Sign in"> </form> </li>
+            <li class="t-right"> <img src="squares.jpeg" style= "height:27px; width:27px"> </li>
         </ul>
 <!--Middle of page/content-->
  <div class="center">
