--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <ul>
             <li class="t-left"> <img id="logo" src=https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png alt="Google logo">
             </li>
-            <li> <form class="searchbar"> <input type="text"> </form></li>
+            <li class="t-left"> <form class="searchbar"> <input type="text"> </form></li>
             <li class="t-right"> <form> <input class="sign-in" type="submit" value="Sign in"> </form> </li>
             <li class="t-right"> <img src="squares.jpeg" style= "height:27px; width:27px"> </li>
         </ul>
@@ -19,13 +19,6 @@
     <div class="icons">
         <img src="https://upload.wikimedia.org/wikipedia/commons/2/22/Google_Magnifying_Glass.svg" id="icon-l" style="background-colorquamarine;"> <img src="assets/mic.png" id="icon-r">
      </div>
-    <!--Submit buttons-->
-    <div>
-        <form>
-            <input type="submit" value="Google Search">
-            <input type="submit" value="I'm Feeling Lucky">
-        </form>
-    </div>
 </div>
 <!--footer section-->
  <div class="bottom-nav">
