cleaned up excess teplate coding and begun work on lower nav

--- a/index.html
+++ b/index.html
@@ -13,26 +13,16 @@
             <li class="t-right"> <form> <input class="sign-in" type="submit" value="Sign in"> </form> </li>
             <li class="t-right"> <img src="squares.jpeg" style= "height:27px; width:27px"> </li>
         </ul>
-<!--Middle of page/content-->
- <div class="center">
-    </div>
-    <div class="icons">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/2/22/Google_Magnifying_Glass.svg" id="icon-l" style="background-colorquamarine;"> <img src="assets/mic.png" id="icon-r">
-     </div>
-</div>
-<!--footer section-->
- <div class="bottom-nav">
-    <p style="text-align: left";>United Kingdom</p>
-        <ul> 
-         <div class="bnav-divider" style="border-top: 0.5px solid  #dfe1e5;">
-          <li class="b-left">Advertising</li>
-          <li class="b-left">Business</li>
-          <li class="b-left">How Search Works</li>
-          <li class="b-right">Privacy</li>
-          <li class="b-right">Terms</li>
-          <li class="b-right">Settings</li>
-         </div>
-        </ul>
-</div>
+<!--lower top nav bar-->
+ <ul id="ltnav">
+     <li class="lt-mid">All</li>
+     <li class="lt-mid">News</li>
+     <li class="lt-mid">Maps</li>
+     <li class="lt-mid">Videos</li>
+     <li class="lt-mid">Shopping</li>
+     <li class="lt-mid">More</li>
+     <li class="lt-right">Settings</li>
+     <li class="lt-right">Tools</li>
+ </ul>
 </body>
 </html>
