removed floats - going to attempt to arrange using flex

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <!--Top navigation bar/searchbar-->
-        <ul>
+        <ul id="tnav">
             <li class="t-left"> <img id="logo" src=https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png alt="Google logo">
             </li>
             <li class="t-left"> <form class="searchbar"> <input type="text"> </form></li>
