added searchbar icons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <div id="top-nav">
   <div id="top-nav-left">
      <img id="logo" src=https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png alt="Google logo">
-     <form class="searchbar"> <input type="text"> </form>
+     <form class="searchbar"> <input type="text" value="build this webpage"> </form>
+  </div>
+  <div id="searchbar-icons">
+    <img id="mic" src="assets/mic.png"> <img id="mag" src="https://upload.wikimedia.org/wikipedia/commons/2/22/Google_Magnifying_Glass.svg">
   </div>
   <div id="top-nav-right">
      <img class="squares" src="squares.jpeg" style= "height:27px; width:27px">
@@ -19,7 +22,7 @@
 <!--lower top nav bar-->
 <div id="searchbar-nav">
  <ul id="list">
-     <li class="lt-mid">All</li>
+     <li class="lt-mid-all">All</li>
      <li class="lt-mid">News</li>
      <li class="lt-mid">Maps</li>
      <li class="lt-mid">Videos</li>
@@ -29,5 +32,8 @@
      <li class="lt-right">Tools</li>
  </ul>
 </div>
+<!--search results-->
+<div id="search-results">
+    <p>About 120,000,000 results (0.44 seconds)</p>
 </body>
 </html>
