begin work on search results - need to figure out bold text issues

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <div id="top-nav-left">
      <img id="logo" src=https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png alt="Google logo">
      <form class="searchbar"> <input type="text" value="build this webpage"> </form>
-  </div>
-  <div id="searchbar-icons">
-    <img id="mic" src="assets/mic.png"> <img id="mag" src="https://upload.wikimedia.org/wikipedia/commons/2/22/Google_Magnifying_Glass.svg">
-  </div>
+      <div id="searchbar-icons">
+       <img id="mic" src="assets/mic.png"> <img id="mag" src="https://upload.wikimedia.org/wikipedia/commons/2/22/Google_Magnifying_Glass.svg">
+      </div>
+    </div>
   <div id="top-nav-right">
      <img class="squares" src="squares.jpeg" style= "height:27px; width:27px">
      <form> <input class="sign-in" type="submit" value="Sign in"> </form>
@@ -34,6 +34,10 @@
 </div>
 <!--search results-->
 <div id="search-results">
-    <p>About 120,000,000 results (0.44 seconds)</p>
+    <p style= color:#70757A>About 120,000,000 results (0.44 seconds)</p>
+    <br>
+    <p class="web-url">victor-If.github.io</p> <p class="web-url2"> > google-search-results</p>
+    <h1><a href="blank">build this webpage - GitHub Pages</a></h1>
+    <p><strong>build this webpage</strong>. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...</p>
 </body>
 </html>
