fixed first result and added also searched for box

--- a/index.html
+++ b/index.html
@@ -39,5 +39,19 @@
     <p class="web-url">victor-If.github.io</p> <p class="web-url2"> > google-search-results</p>
     <h1><a href="blank">build this webpage - GitHub Pages</a></h1>
     <p><strong>build this webpage</strong>. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...</p>
+    <div id="also-search-for-box">
+        <ul>
+            <li><strong>People also search for</strong></li>
+            <li><a href="blank">html and css projects</a></li>
+            <li><a href="blank">css reset</a></li>
+            <li><a href="blank">odin project</a></li>
+        </ul>
+        <ul class="also-box-right">
+            <li><a href="blank">w3schools</a></li>
+            <li><a href="blank">github</a></li>
+            <li><a href="blank">font awesome</a></li>
+        </ul>
+    </div>
+</div>
 </body>
 </html>
