bulk added all search results and improved CSS for search results

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <p style= color:#70757A>About 120,000,000 results (0.44 seconds)</p>
     <br>
     <p class="web-url">victor-If.github.io</p> <p class="web-url2"> > google-search-results</p>
-    <h1><a href="blank">build this webpage - GitHub Pages</a></h1>
+    <p id="search-heading"><a href="blank">build this webpage - GitHub Pages</a></p>
     <p><strong>build this webpage</strong>. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...</p>
     <div id="also-search-for-box">
         <ul>
@@ -52,6 +52,38 @@
             <li><a href="blank">font awesome</a></li>
         </ul>
     </div>
+    <br>
+    <p class="web-url">christine.27.github.io</p> <p class="web-url2"> > google-homepage</p>
+    <p id="search-heading"><a href="blank">build this webpage - GitHub Pages</a></p>
+    <p>With zero coding experience, artist <strong>building</strong> 180 <strong>webpages</strong> 180 days. hhttps://arstechnica.com/.../with-zero-coding-experience-artist-<strong>building</strong>-180-<strong>webpages-</strong></p>
+    <br>
+    <p class="web-url">christine.27.github.io</p> <p class="web-url2"> > google-homepage</p>
+    <p id="search-heading"><a href="blank">build this webpage - GitHub Pages</a></p>
+    <p>With zero coding experience, artist <strong>building</strong> 180 <strong>webpages</strong> 180 days. hhttps://arstechnica.com/.../with-zero-coding-experience-artist-<strong>building</strong>-180-<strong>webpages-</strong></p>
+    <br>
+    <p class="web-url">christine.27.github.io</p> <p class="web-url2"> > google-homepage</p>
+    <p id="search-heading"><a href="blank">build this webpage - GitHub Pages</a></p>
+    <p>With zero coding experience, artist <strong>building</strong> 180 <strong>webpages</strong> 180 days. hhttps://arstechnica.com/.../with-zero-coding-experience-artist-<strong>building</strong>-180-<strong>webpages-</strong></p>
+    <br>
+    <p class="web-url">christine.27.github.io</p> <p class="web-url2"> > google-homepage</p>
+    <p id="search-heading"><a href="blank">build this webpage - GitHub Pages</a></p>
+    <p>With zero coding experience, artist <strong>building</strong> 180 <strong>webpages</strong> 180 days. hhttps://arstechnica.com/.../with-zero-coding-experience-artist-<strong>building</strong>-180-<strong>webpages-</strong></p>
+    <br>
+    <p class="web-url">christine.27.github.io</p> <p class="web-url2"> > google-homepage</p>
+    <p id="search-heading"><a href="blank">build this webpage - GitHub Pages</a></p>
+    <p>With zero coding experience, artist <strong>building</strong> 180 <strong>webpages</strong> 180 days. hhttps://arstechnica.com/.../with-zero-coding-experience-artist-<strong>building</strong>-180-<strong>webpages-</strong></p>
+    <br>
+    <p class="web-url">christine.27.github.io</p> <p class="web-url2"> > google-homepage</p>
+    <p id="search-heading"><a href="blank">build this webpage - GitHub Pages</a></p>
+    <p>With zero coding experience, artist <strong>building</strong> 180 <strong>webpages</strong> 180 days. hhttps://arstechnica.com/.../with-zero-coding-experience-artist-<strong>building</strong>-180-<strong>webpages-</strong></p>
+    <br>
+    <p class="web-url">christine.27.github.io</p> <p class="web-url2"> > google-homepage</p>
+    <p id="search-heading"><a href="blank">build this webpage - GitHub Pages</a></p>
+    <p>With zero coding experience, artist <strong>building</strong> 180 <strong>webpages</strong> 180 days. hhttps://arstechnica.com/.../with-zero-coding-experience-artist-<strong>building</strong>-180-<strong>webpages-</strong></p>
+    <br>
+    <p class="web-url">christine.27.github.io</p> <p class="web-url2"> > google-homepage</p>
+    <p id="search-heading"><a href="blank">build this webpage - GitHub Pages</a></p>
+    <p>With zero coding experience, artist <strong>building</strong> 180 <strong>webpages</strong> 180 days. hhttps://arstechnica.com/.../with-zero-coding-experience-artist-<strong>building</strong>-180-<strong>webpages-</strong></p>
 </div>
 </body>
 </html>
