finished search results and added people also search for div

--- a/index.html
+++ b/index.html
@@ -53,37 +53,38 @@
         </ul>
     </div>
     <br>
-    <p class="web-url">christine.27.github.io</p> <p class="web-url2"> > google-homepage</p>
-    <p id="search-heading"><a href="blank">build this webpage - GitHub Pages</a></p>
+    <p class="web-url">www.websitebuilderexpert.com</p> <p class="web-url2"> > building-websites</p>
+    <p id="search-heading"><a href="blank">How to Build a Website 2020 | The Complete Beginner's Guide</a></p>
     <p>With zero coding experience, artist <strong>building</strong> 180 <strong>webpages</strong> 180 days. hhttps://arstechnica.com/.../with-zero-coding-experience-artist-<strong>building</strong>-180-<strong>webpages-</strong></p>
     <br>
-    <p class="web-url">christine.27.github.io</p> <p class="web-url2"> > google-homepage</p>
-    <p id="search-heading"><a href="blank">build this webpage - GitHub Pages</a></p>
-    <p>With zero coding experience, artist <strong>building</strong> 180 <strong>webpages</strong> 180 days. hhttps://arstechnica.com/.../with-zero-coding-experience-artist-<strong>building</strong>-180-<strong>webpages-</strong></p>
+    <p class="web-url">www.pcmag.com</p> <p class="web-url2"> > ... > Web Hosting</p>
+    <p id="search-heading"><a href="blank">How to Create a Website | PCMag</a></p>
+    <p>You can use an online service to create <strong>web</strong> pages, or <strong>build</strong> it offline using a desktop software tool. Or, if you're a coding dynamo, use a plain text editor to create a ...</strong></p>
     <br>
-    <p class="web-url">christine.27.github.io</p> <p class="web-url2"> > google-homepage</p>
-    <p id="search-heading"><a href="blank">build this webpage - GitHub Pages</a></p>
-    <p>With zero coding experience, artist <strong>building</strong> 180 <strong>webpages</strong> 180 days. hhttps://arstechnica.com/.../with-zero-coding-experience-artist-<strong>building</strong>-180-<strong>webpages-</strong></p>
+    <p class="web-url">www.squarespace.com</p>
+    <p id="search-heading"><a href="blank">Squarespace: Build a Website – Website Builder</a></p>
+    <p>Squarespace is the all-in-one solution for anyone looking to create a beautiful <strong>website</strong>>. Domains, eCommerce, hosting, galleries, analytics, and 24/7 support all ...</p>
     <br>
-    <p class="web-url">christine.27.github.io</p> <p class="web-url2"> > google-homepage</p>
-    <p id="search-heading"><a href="blank">build this webpage - GitHub Pages</a></p>
-    <p>With zero coding experience, artist <strong>building</strong> 180 <strong>webpages</strong> 180 days. hhttps://arstechnica.com/.../with-zero-coding-experience-artist-<strong>building</strong>-180-<strong>webpages-</strong></p>
+    <p class="web-url">neilpatel.com</p> <p class="web-url2"> > blog > from-0-to-launch-6-steps-to-buil...</p>
+    <p id="search-heading"><a href="blank">Build a Website: 6 Steps From 0 to Launch - Neil Patel</a></p>
+    <p>Ready to <strong>build</strong> a <strong>website</strong>? Here's step by step guide to <strong>building</strong>> and opimizing your first website including what hosting and CMS to use.</p>
     <br>
-    <p class="web-url">christine.27.github.io</p> <p class="web-url2"> > google-homepage</p>
-    <p id="search-heading"><a href="blank">build this webpage - GitHub Pages</a></p>
-    <p>With zero coding experience, artist <strong>building</strong> 180 <strong>webpages</strong> 180 days. hhttps://arstechnica.com/.../with-zero-coding-experience-artist-<strong>building</strong>-180-<strong>webpages-</strong></p>
+    <p class="web-url">www.google.com</p> <p class="web-url2"> > business > website-builder</p>
+    <p id="search-heading"><a href="blank">Free Website Builder For Your Business - Google My Business</a></p>
+    <p>Let Google <strong>build</strong> your first <strong>website</strong> for free. We'll help you create a beautiful <strong>website</strong>> to impress and engage new customers – and establish your business online.</strong></p>
     <br>
-    <p class="web-url">christine.27.github.io</p> <p class="web-url2"> > google-homepage</p>
-    <p id="search-heading"><a href="blank">build this webpage - GitHub Pages</a></p>
-    <p>With zero coding experience, artist <strong>building</strong> 180 <strong>webpages</strong> 180 days. hhttps://arstechnica.com/.../with-zero-coding-experience-artist-<strong>building</strong>-180-<strong>webpages-</strong></p>
+    <p class="web-url">www.webhostingsecretrevealed.net</p> <p class="web-url2"> > WHSR Blog</p>
+    <p id="search-heading"><a href="blank">How to Create a Website: Step-by-Step Tutorial</a></p>
+    <p>Jump to <a href="blank"><strong>Creating</strong> from scratch</a> — <strong>Creating</strong> from scratch; Using a content management system (CMS); Using a website builder. You get more flexibility in ...
+    </p>
     <br>
-    <p class="web-url">christine.27.github.io</p> <p class="web-url2"> > google-homepage</p>
-    <p id="search-heading"><a href="blank">build this webpage - GitHub Pages</a></p>
-    <p>With zero coding experience, artist <strong>building</strong> 180 <strong>webpages</strong> 180 days. hhttps://arstechnica.com/.../with-zero-coding-experience-artist-<strong>building</strong>-180-<strong>webpages-</strong></p>
+    <p class="web-url">websitesetup.org</p>
+    <p id="search-heading"><a href="blank">How to Create a Website: Step-by-Step Guide for Beginners ...</a></p>
+    <p>11 Mar 2020 — Learn how to make a <strong>website</strong>> and set it up. This site contains different tutorials on how to <strong>build</strong> a <strong>website</strong>> using WordPress, Joomla, Drupal ...</p>
     <br>
-    <p class="web-url">christine.27.github.io</p> <p class="web-url2"> > google-homepage</p>
-    <p id="search-heading"><a href="blank">build this webpage - GitHub Pages</a></p>
-    <p>With zero coding experience, artist <strong>building</strong> 180 <strong>webpages</strong> 180 days. hhttps://arstechnica.com/.../with-zero-coding-experience-artist-<strong>building</strong>-180-<strong>webpages-</strong></p>
+    <br>
+    <p style="color: #222; font-size: 20px;">People also search for</p>
 </div>
+<div id="also-search-for-box-2">Top 20 website builders</div>
 </body>
 </html>
