begun work on people also search for box and containers

--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
     <br>
     <p style="color: #222; font-size: 20px;">People also search for</p>
 </div>
-<div id="also-search-for-box-2">Top 20 website builders</div>
+<div id="also-search-for-box-2">
+    Top 20 website builders
+    <br>
+    <div id="also-search-containers">Mobirise</div>
+    <div id="also-search-containers">Wordpress</div>
+    <div id="also-search-containers">GoDaddy</div>
+    <div id="also-search-containers">Weebly</div>
+    <div id="also-search-containers">Shopify</div>
+    <div id="also-search-containers">Webnode</div>
+
+
+</div>
 </body>
 </html>
