completed bottom container with logos in rough begun work on footer

--- a/index.html
+++ b/index.html
@@ -88,14 +88,39 @@
 <div id="also-search-for-box-2">
     Top 20 website builders
     <br>
-    <div id="also-search-containers">Mobirise</div>
-    <div id="also-search-containers">Wordpress</div>
-    <div id="also-search-containers">GoDaddy</div>
-    <div id="also-search-containers">Weebly</div>
-    <div id="also-search-containers">Shopify</div>
-    <div id="also-search-containers">Webnode</div>
-
-
+    <div id="shop-logo-boxes-container">
+     <div id="shop-logo-boxes">Mobirise<img src="assets/mobirise.png" class="shop-logo"></div>
+     <div id="shop-logo-boxes">Wordpress<img src="assets/wordpress.png" class="shop-logo"></div>
+     <div id="shop-logo-boxes">GoDaddy<img src="assets/godaddy.png" class="shop-logo"></div>
+     <div id="shop-logo-boxes">Weebly<img src="assets/weebly.png" class="shop-logo"></div>
+     <div id="shop-logo-boxes">Shopify<img src="assets/shopify.png" class="shop-logo"></div>
+     <div id="shop-logo-boxes">Webnode<img src="assets/webnode.png" class="shop-logo"></div>
+    </div>
+    <div id="see-more-container">
+      <div id="see-more">
+        <img src="assets/arrow.png" class="arrow-icon">
+          See more
+     </div>
+    </div>
 </div>
+<div id="search-results">
+    <p style="color: #222; font-size: 20px;">Searches related to build this webpage</p>
+    <div id="also-search-for-box-footer">
+        <ul>
+            <li><a href="blank">html and css projects</a></li>
+            <li><a href="blank">css reset</a></li>
+            <li><a href="blank">odin project</a></li>
+        </ul>
+        <ul class="also-box-right-footer">
+            <li><a href="blank">w3schools</a></li>
+            <li><a href="blank">github</a></li>
+            <li><a href="blank">font awesome</a></li>
+        </ul>
+    </div>
+</div>
+<br>
+<br>
+<br>
+<br>
 </body>
 </html>
