rough completed footer bar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <!--Top navigation bar/searchbar-->
-<div id="top-nav">
+ <div id="top-nav">
   <div id="top-nav-left">
      <img id="logo" src=https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png alt="Google logo">
      <form class="searchbar"> <input type="text" value="build this webpage"> </form>
@@ -18,10 +18,10 @@
      <img class="squares" src="squares.jpeg" style= "height:27px; width:27px">
      <form> <input class="sign-in" type="submit" value="Sign in"> </form>
   </div>
-</div>
-<!--lower top nav bar-->
-<div id="searchbar-nav">
- <ul id="list">
+ </div>
+ <!--lower top nav bar-->
+ <div id="searchbar-nav">
+  <ul>
      <li class="lt-mid-all">All</li>
      <li class="lt-mid">News</li>
      <li class="lt-mid">Maps</li>
@@ -30,15 +30,15 @@
      <li class="lt-mid">More</li>
      <li class="lt-right">Settings</li>
      <li class="lt-right">Tools</li>
- </ul>
-</div>
-<!--search results-->
-<div id="search-results">
-    <p style= color:#70757A>About 120,000,000 results (0.44 seconds)</p>
-    <br>
-    <p class="web-url">victor-If.github.io</p> <p class="web-url2"> > google-search-results</p>
-    <p id="search-heading"><a href="blank">build this webpage - GitHub Pages</a></p>
-    <p><strong>build this webpage</strong>. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...</p>
+  </ul>
+ </div>
+ <!--search results-->
+ <div id="search-results">
+  <p style= color:#70757A>About 120,000,000 results (0.44 seconds)</p>
+  <br>
+  <p class="web-url">victor-If.github.io</p> <p class="web-url2"> > google-search-results</p>
+  <p id="search-heading"><a href="blank">build this webpage - GitHub Pages</a></p>
+  <p><strong>build this webpage</strong>. https://benjdelt.github.io/google-results/. With zero coding experience, artist building 180 webpages in 180 days ...</p>
     <div id="also-search-for-box">
         <ul>
             <li><strong>People also search for</strong></li>
@@ -84,11 +84,11 @@
     <br>
     <br>
     <p style="color: #222; font-size: 20px;">People also search for</p>
-</div>
-<div id="also-search-for-box-2">
+ </div>
+ <div id="also-search-for-box-2">
     Top 20 website builders
     <br>
-    <div id="shop-logo-boxes-container">
+   <div id="shop-logo-boxes-container">
      <div id="shop-logo-boxes">Mobirise<img src="assets/mobirise.png" class="shop-logo"></div>
      <div id="shop-logo-boxes">Wordpress<img src="assets/wordpress.png" class="shop-logo"></div>
      <div id="shop-logo-boxes">GoDaddy<img src="assets/godaddy.png" class="shop-logo"></div>
@@ -102,8 +102,8 @@
           See more
      </div>
     </div>
-</div>
-<div id="search-results">
+ </div>
+ <div id="search-results">
     <p style="color: #222; font-size: 20px;">Searches related to build this webpage</p>
     <div id="also-search-for-box-footer">
         <ul>
@@ -117,10 +117,19 @@
             <li><a href="blank">font awesome</a></li>
         </ul>
     </div>
-</div>
-<br>
-<br>
-<br>
-<br>
+ </div>
+ <!--footer-->
+ <div id="footer-bar">
+        <ul id="footer-bar-top">
+            <li>United Kingdom</li>
+            <li class="location"><strong>Brislington, Bristol</strong>- From your Internet address - Use precise location - Learn more</li>
+        </ul>
+     <ul id="footer-bar-bottom">
+         <li>Help</li>
+         <li>Send Feedback</li>
+         <li>Privacy</li>
+         <li>Terms</li>
+     </ul>
+ </div>
 </body>
 </html>
