--- a/index.html
+++ b/index.html
@@ -99,30 +99,51 @@
     <div id="see-more-container">
       <div id="see-more">
         <img src="assets/arrow.png" class="arrow-icon">
-          See more
+          <a href="blank">See more</a>
      </div>
     </div>
  </div>
  <div id="search-results">
     <p style="color: #222; font-size: 20px;">Searches related to build this webpage</p>
+    <br>
     <div id="also-search-for-box-footer">
         <ul>
-            <li><a href="blank">html and css projects</a></li>
-            <li><a href="blank">css reset</a></li>
-            <li><a href="blank">odin project</a></li>
+            <li><a href="blank"><strong>how to</strong> build <strong>a website from scratch</strong></a></li>
+            <li><a href="blank"><strong>create professional website</strong></a></li>
+            <li><a href="blank"><strong>creating a website for your business</strong></a></li>
+            <li><a href="blank"><strong>how to build a website from scratch html</strong></a></li>
         </ul>
         <ul class="also-box-right-footer">
-            <li><a href="blank">w3schools</a></li>
-            <li><a href="blank">github</a></li>
-            <li><a href="blank">font awesome</a></li>
+            <li><a href="blank"><strong>free website</strong></a></li>
+            <li><a href="blank"><strong>website builder</strong></a></li>
+            <li><a href="blank">build<strong> a website in a day</strong></a></li>
+            <li><a href="blank"><strong>how to create a website pdf</strong>></a></li>
         </ul>
     </div>
  </div>
+ <br>
  <!--footer-->
+ <div id="next-page-nav">
+    <img id="logo-next-page" src="assets/googlenav.PNG" alt="Google logo">
+    <ul>
+        <li class="page-numbers">1</a></li>
+        <li class="page-numbers">2</a></li>
+        <li class="page-numbers">3</a></li>
+        <li class="page-numbers">4</a></li>
+        <li class="page-numbers">5</a></li>
+        <li class="page-numbers">6</a></li>
+        <li class="page-numbers">7</a></li>
+        <li class="page-numbers">8</a></li>
+        <li class="page-numbers">9</a></li>
+        <li class="page-numbers">10</a></li>
+    </ul>
+ </div>
+ <br>
+ <br>
  <div id="footer-bar">
         <ul id="footer-bar-top">
             <li>United Kingdom</li>
-            <li class="location"><strong>Brislington, Bristol</strong>- From your Internet address - Use precise location - Learn more</li>
+            <li class="location" style="color:#333"><strong>Brislington, Bristol</strong> - From your Internet address - Use precise location - Learn more</li>
         </ul>
      <ul id="footer-bar-bottom">
          <li>Help</li>
