trying to add next page arrow. Struggling with allignments

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <li><a href="blank"><strong>free website</strong></a></li>
             <li><a href="blank"><strong>website builder</strong></a></li>
             <li><a href="blank">build<strong> a website in a day</strong></a></li>
-            <li><a href="blank"><strong>how to create a website pdf</strong>></a></li>
+            <li><a href="blank"><strong>how to create a website pdf</strong></a></li>
         </ul>
     </div>
  </div>
@@ -137,6 +137,10 @@
         <li class="page-numbers">9</a></li>
         <li class="page-numbers">10</a></li>
     </ul>
+    <div id="next-page-nav-two">
+    <img id="arrow-icon-two" src="assets/arrow.png">
+    <p>Next</p>
+  </div>
  </div>
  <br>
  <br>
